All sections work dones and some card sections alignment related bug fixes except resposive works

--- a/Styles/style.css
+++ b/Styles/style.css
@@ -384,6 +384,7 @@ grid-template-areas:
     background-color: rgba(26, 11, 46, 1);
     max-width: 1600px;
     margin: 0 auto;
+    padding-bottom:120px ;
 }
 .last-section h1{
     color: #FFFFFF;
@@ -433,9 +434,9 @@ grid-template-areas:
     display: flex;
     flex-direction: column;
     gap: 12px;
-    padding: 24px;
+    padding: 0 0 24px 0;
     background-color: rgba(37, 13, 68, 1);
-  
+   border-radius: 24px 24px 0 0;
   
 }
 .video-card iframe{
@@ -443,6 +444,10 @@ grid-template-areas:
      height: auto;
      border-radius:24px 24px 0 0 ;
   
+}
+.video-card h3,
+.video-card p{
+    padding: 0 24px;
 }
 
 .duration{
@@ -460,7 +465,7 @@ gap:6px;
     padding: 40px;
     border-radius: 40px;
     margin: 0 200px;
-    margin-bottom: 120px;
+  
 }
 .container ul{
     display: flex;
@@ -490,10 +495,42 @@ gap:6px;
 
 }
 
+.footer{
+    width:100%;
+    max-width: 1600px;
+    margin:0 auto;
+    background-image:url(../assets/footer-bg.png);
+    background-size: 100% 100%;
+}
+.end-part{
+    padding: 120px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap:32px
+ 
+}
+.end-part ul,p{
+    color: #ffffff80;
+    display: flex;
+    justify-content: center;
+    gap:40px;
+    font-size: 1rem;
+}
+.end-part li{
+    color: #ffffffb6;
+    display: flex;
+    justify-content: center;
+    gap:8px;
+    font-size: 1rem;
+}
+
+.logo{
+color: #FFFFFF;
+max-width: 410px;
 
 
-
-
+}
 
 
 
@@ -663,19 +700,22 @@ width: 100%;
     grid-template-columns: repeat(1,1fr);
     gap:60px;
    padding:40px 20px 0px 20px;
+   
 }
 
 .video-card{
   width: 100%;
-  width: 400px;
+  max-width: 400px;
   margin: 0 auto;
+  padding: 0 0 24px 0;
+ 
   
 }
 .video-card iframe{
   width: 100%;
- 
-  height: 200px;
-
+  height: auto;
+  aspect-ratio: 16/9;
+  display: block;
   
 }
 
